--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -339,32 +339,34 @@ main {
     padding-top: 5em;
     .subText {
       color: variables.$orange;
-      font-size: clamp(1.2rem, 1.1538rem + 0.2308vw, 1.5rem) !important;
+      font-size: 2rem !important;
       font-weight: 600;
     }
     h2 {
-      font-size: clamp(1.5rem, 1.2692rem + 1.1538vw, 3rem);
+      font-size: 3.5rem;
       // white-space: pre-line;
       color: variables.$voilet;
       font-weight: 600;
       line-height: 1.2em;
       margin-top: 0.7em;
+      letter-spacing: 4px;
       text-align: center;
     }
     .ourServicesContent {
       @include mixins.flex-center;
       text-align: left;
+      margin-bottom: 4rem;
       h3 {
         font-size: clamp(1.2rem, 1.1538rem + 0.2308vw, 1.5rem);
-        color: variables.$darkgrey;
+        color: #7f7f7f;
         margin: 0.8em 0 0.5em;
         font-weight: 600;
       }
       p {
         font-size: clamp(1rem, 0.9692rem + 0.1538vw, 1.2rem);
         color: variables.$darkgrey;
-        font-weight: 400;
-        line-height: 1.8em;
+        font-weight: 300;
+        line-height: 2.5rem;
         white-space: pre-line;
         margin-top: -2em;
       }
@@ -372,12 +374,14 @@ main {
     .serviceList,
     .serviceListMob {
       @include mixins.flex-center;
+      gap: 2rem !important;
       gap: 1em;
       .item {
         border: 1px solid variables.$lightgrey;
         border-radius: 2em;
-        padding: 2em 2em;
+        padding: 4rem 1.1rem;
         width: 20%;
+        height: 350px;
         span {
           background-color: variables.$orange;
           width: 75px;
@@ -390,6 +394,10 @@ main {
           font-size: clamp(1rem, 0.9692rem + 0.1538vw, 1.2rem);
           color: variables.$orange;
           margin: 0.8em 0 0.5em;
+        }
+        p {
+          font-size: 1rem;
+          color: variables.$darkgrey;
         }
       }
       .item:nth-child(2) {
