--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -146,22 +146,21 @@ main {
 
       .subText {
         color: variables.$orange;
-        font-size: clamp(1.2rem, 0.9692rem + 0.1538vw, 1.5rem);
-
+        font-size: 2rem;
         font-weight: 600;
       }
       h2 {
-        font-size: clamp(1.5rem, 1.2692rem + 1.1538vw, 3rem);
+        font-size: 3.5rem;
         // white-space: pre-line;
-        color: variables.$darkgrey;
+        color: #7f7f7f;
         font-weight: 500;
         line-height: 1.2em;
         margin-top: 0.7em;
-        padding-right: 4.5em;
+        padding-right: 8rem;
       }
       p {
         font-size: clamp(1rem, 0.9692rem + 0.1538vw, 1.2rem);
-        color: variables.$darkgrey;
+        color: #7f7f7f;
         font-weight: 400;
         line-height: 1.5em;
         margin-top: 1em;
@@ -247,6 +246,9 @@ main {
       .feature-box {
         display: none;
         max-width: 300px;
+        p{
+          font-size: 13px;
+        }
       }
 
       .feature-box.active {
@@ -277,10 +279,11 @@ main {
       }
       .imgContent {
         @include mixins.flex-center;
-        margin-bottom: 4em;
+        margin-bottom: 4rem;
+        margin-top: 4.5rem;
 
         h3 {
-          font-size: clamp(1.2rem, 1.1538rem + 0.2308vw, 1.5rem);
+          font-size: 1.7rem;
           color: variables.$voilet;
           margin: 0.8em 0 0.5em;
           font-weight: 500;
@@ -302,7 +305,7 @@ main {
         li {
           flex: 1 1 48%;
           position: relative;
-          font-size: clamp(1rem, 0.9692rem + 0.1538vw, 1.2rem);
+          font-size: 1rem;
           font-weight: 400;
           padding: 0em 0 0.5rem 2em;
           font-weight: 300;
