--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -838,6 +838,9 @@ main {
           gap: 1em;
           font-size: 1.33rem;
         }
+        img{
+          width: auto;
+        }
       }
       .inner {
         padding: 3em;
