--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 @use "../abstracts/mixins";
 @use "../abstracts/variables";
 
+
 .heroBanner {
   header {
     position: relative;
@@ -17,9 +18,16 @@
       cursor: pointer;
       z-index: 1100;
       position: relative;
+      color: variables.$black;
+
+      // This hides the original icon when open and shows × instead
+      &::before {
+        content: "☰"; // hamburger icon
+        font-size: 2.5rem;
+      }
 
       &.open::before {
-        content: "×";
+        content: "×"; // cross icon
         font-size: 2.5rem;
       }
     }
@@ -66,7 +74,7 @@
         background-color: variables.$white;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: start;
         padding: 2rem;
         transform: translateX(-100%);
         transition: transform 0.4s ease-in-out;
@@ -77,6 +85,9 @@
         ul {
           flex-direction: column;
           gap: 1.5rem;
+          justify-content: unset;
+          align-items: start;
+          margin-top: 5rem;
 
           li a {
             color: variables.$black;
@@ -93,10 +104,6 @@
 
       .mobileRight {
         display: none;
-      }
-
-      body.menu-open {
-        overflow: hidden;
       }
     }
   }
