--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -842,7 +842,7 @@ main {
           gap: 1em;
           font-size: 1.33rem;
         }
-        img{
+        img {
           width: auto;
         }
       }
@@ -1003,13 +1003,28 @@ main {
   }
 
   @media (max-width: 768px) {
-    
     img {
       width: 100%;
     }
+    //BANNER
     .heroBanner {
       .heroBannerContent {
-        padding: 1rem 2.5rem;
+        padding: 1rem 2.5rem 5rem;
+        h1 {
+          font-weight: 600;
+        }
+        p {
+          width: 80%;
+          position: relative;
+          z-index: 99;
+        }
+        a {
+          padding: 1rem 2rem;
+        }
+        .scrollMouse::before {
+          height: 100px;
+          top: 50px;
+        }
       }
       .objects {
         img:nth-child(2) {
@@ -1026,6 +1041,27 @@ main {
         .object4 {
           display: none;
         }
+      }
+    }
+    //ABOUT
+    .aboutUs {
+      padding-top: 5rem;
+      img {
+        width: auto;
+        margin-left: 53px;
+      }
+      h2 {
+        font-size: 2rem;
+      }
+      p {
+        span {
+          display: none;
+        }
+      }
+    }
+    .aboutUs2 {
+      .subText {
+        font-size: 1.5rem !important;
       }
     }
     .aboutUs,
@@ -1047,6 +1083,7 @@ main {
         }
       }
     }
+
     .work {
       .workContent {
         grid-template-columns: 1fr;
@@ -1322,9 +1359,13 @@ main {
 
     .mobilePlanSelector,
     .mobilePlans {
-      display: block !important;
+      display: inline-block !important;
       .plan {
         display: none !important;
+        width: 320px !important;
+        .price {
+          width: 350px !important;
+        }
         &.active {
           display: block !important;
         }
@@ -1337,7 +1378,7 @@ main {
     }
     // TABS for Mobile
     ul.tabs {
-      margin-top: 1rem;
+      margin: 2rem 0;
       padding: 0px;
       list-style: none;
       display: flex !important;
@@ -1346,6 +1387,8 @@ main {
       padding: 0.5rem;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 3.564px 1.816px 31.5px 3.5px rgba(90, 90, 90, 0.15);
+
       li {
         background: #eaeaea;
         color: #222;
@@ -1379,6 +1422,9 @@ main {
     }
     .tabs-content {
       display: block !important;
+      h3 {
+        font-size: 1.5rem;
+      }
       #tab-1 {
         h3 {
           color: variables.$orange;
