--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -65,6 +65,10 @@
       .hamburger {
         display: block;
         color: variables.$white;
+
+        &.open {
+          color: variables.$orange !important;
+        }
       }
 
       .mobileMenu {
