--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -442,7 +442,7 @@ main {
         border-radius: 2em;
         padding: 3rem 1.1rem;
         height: 100%;
-        margin: 0 3rem;
+        margin: 0 2rem;
       }
     }
   }
@@ -752,6 +752,12 @@ main {
         font-weight: 400;
         margin-top: 3rem;
         line-height: 1.4;
+        span.mob {
+          display: none;
+        }
+        span.desktop {
+          display: block;
+        }
       }
       .portfolio {
         ul {
@@ -1062,7 +1068,7 @@ main {
         margin-left: 53px;
       }
       h2 {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
       p {
         span {
@@ -1075,11 +1081,11 @@ main {
       .aboutUs2Content {
         h2 {
           padding-right: 0 !important;
-          font-size: 1.9rem;
+          font-size: 1.8rem;
         }
       }
       .subText {
-        font-size: 1.5rem !important;
+        font-size: 1.4rem !important;
       }
       .mission {
         span {
@@ -1135,11 +1141,41 @@ main {
         }
         .portfolio {
           ul {
-            li {
-              padding: 0.5em !important;
-              img {
-                width: 100px;
+            display: flex;
+            flex-direction: column;
+            gap: 0.3rem;
+
+            li:first-child {
+              img:first-child,
+              img:nth-child(2) {
+                width: 55%;
               }
+            }
+            li:nth-child(2) {
+              img:first-child,
+              img:nth-child(2),
+              img:nth-child(3) {
+                width: 30%;
+              }
+            }
+            li:nth-child(3) {
+              img:first-child,
+              img:nth-child(2),
+              img:nth-child(3),
+              img:nth-child(4) {
+                width: 15%;
+              }
+            }
+            li:nth-child(4) {
+              img:first-child,
+              img:nth-child(2) {
+                width: 10%;
+                padding: 0 !important;
+              }
+            }
+            li {
+              gap: 0.3rem;
+              padding: 0 !important;
             }
           }
           .lamp {
@@ -1155,7 +1191,7 @@ main {
         font-size: 1.4rem !important;
       }
       h2 {
-        font-size: 1.7rem;
+        font-size: 1.8rem;
       }
       .ourServicesContent {
         flex-direction: column;
@@ -1291,26 +1327,43 @@ main {
       }
     }
     .work {
+      p {
+        font-size: 1.4rem;
+      }
       .workContent {
         h2,
         h3 {
-          font-size: 2rem;
+          font-size: 1.8rem;
           line-height: normal;
+          .mob {
+            display: block !important;
+          }
+          .desktop {
+            display: none !important;
+          }
         }
       }
     }
     .contact {
+      span {
+        font-size: 1.4rem !important;
+      }
+      h2 {
+        font-size: 1.8rem !important;
+        line-height: 1.5;
+      }
       .form {
         grid-template-columns: 1fr;
         gap: 2rem;
         margin-bottom: 3rem;
         article {
           order: 2;
-          border-radius: 2rem;
+          border-radius: 1rem;
           background-position: top;
-          padding: 2rem;
+          background-size: unset;
+          padding: 3rem 2rem;
           h3 {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             margin-bottom: 1rem;
           }
         }
@@ -1364,6 +1417,7 @@ main {
       }
       .send-btn {
         width: 100% !important;
+        padding: 1rem !important;
       }
     }
     .slider {
