--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1633,6 +1633,7 @@ main {
 }
 @media (max-width: 768px) {
   footer {
+    background-image: url("../assets/img/footer-banner-mob.png");
     padding: 6rem 0 4rem;
     .container {
       flex-direction: column;
