--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -3,10 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-html{
-  overflow-x: hidden;
-}
-::selection{
+// html{
+//   overflow-x: hidden;
+// }
+::selection {
   color: black;
   background-color: #fff;
 }
