--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -9,6 +9,9 @@
     // width: 100%;
     z-index: 1000;
     // gap: 5rem;
+    a.logo {
+      width: 184px;
+    }
     .hamburger {
       display: none;
       background: none;
