--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -265,7 +265,7 @@ main {
       }
 
       /* Desktop layout */
-      @media (min-width: 768px) {
+      @media (min-width: 767px) {
         .feature-tabs {
           display: none;
         }
@@ -1019,8 +1019,177 @@ main {
   .serviceListMob ul.slick-dots .slick-active button {
     background-color: variables.$voilet !important;
   }
+  //MEDIA QUERY
+  //1024
 
-  @media (max-width: 768px) {
+  @media screen and (max-width: 1024px) and (min-width: 768px) {
+    .heroBanner {
+      .objects {
+        .object2 {
+          left: 0 !important;
+        }
+      }
+    }
+    .aboutUs {
+      gap: 0rem;
+      grid-template-columns: 200px minmax(150px, 1fr) 0px;
+    }
+    .aboutUs2 {
+      padding-top: 0;
+      grid-template-columns: 1fr;
+    }
+    .ourServices {
+      .ourServicesContent {
+        p {
+          white-space: unset;
+          margin-top: 0;
+        }
+      }
+      .serviceList {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem !important;
+        .item {
+          width: 100%;
+        }
+      }
+    }
+    .bg-grey {
+      margin-top: 5rem;
+      .pricing {
+        .imgContent {
+          flex-direction: column;
+        }
+        .pricingTable {
+          .desktopPlans {
+            display: none;
+          }
+          .customPlanNote {
+            p {
+              flex-direction: column;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+    .custom-select-wrapper,
+    .mobilePlans {
+      display: block !important;
+    }
+    .custom-select-wrapper {
+      position: relative;
+      width: 45%;
+      margin: 2rem auto;
+      display: block !important;
+
+      .custom-select {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ddd;
+        border-radius: 1rem;
+        padding: 1rem;
+        background: white;
+        cursor: pointer;
+        box-shadow: 3.564px 1.816px 31.5px 3.5px rgba(90, 90, 90, 0.15);
+
+        justify-content: space-between;
+        div {
+          display: flex;
+          width: 50%;
+          align-items: center;
+        }
+        .select-icon {
+          width: 30%;
+          margin-right: 8px;
+        }
+
+        .selected-option {
+          flex-grow: 1;
+          font-size: 1.4rem;
+        }
+
+        .arrow {
+          width: auto;
+        }
+      }
+
+      .options {
+        display: none;
+        position: absolute;
+        width: 100%;
+        top: 100%;
+        left: 0;
+        background: white;
+        border: 1px solid #ddd;
+        border-top: none;
+        border-radius: 0 0 12px 12px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+        max-height: 200px;
+        overflow-y: auto;
+
+        li {
+          padding: 10px;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          transition: background-color 0.2s ease;
+          div {
+            display: flex;
+            width: 50%;
+            align-items: center;
+          }
+          img {
+            width: 20px;
+            height: 20px;
+            margin-right: 8px;
+          }
+
+          &:hover {
+            background-color: #f3f3f3;
+          }
+          &.selected {
+            background-color: #f6f6f6;
+            font-weight: 600;
+            position: relative;
+            &::after {
+              content: "✔";
+              position: absolute;
+              right: 16px;
+              top: 50%;
+              transform: translateY(-50%);
+              font-size: 1.2rem;
+              color: #ff4f4f;
+            }
+          }
+        }
+      }
+    }
+
+    .mobilePlanSelector,
+    .mobilePlans {
+      display: inline-block !important;
+      .plan {
+        display: none !important;
+        width: 320px !important;
+        .price {
+          width: 350px !important;
+        }
+        &.active {
+          display: block !important;
+        }
+      }
+    }
+    .work {
+      .workContent {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+
+  //767
+  @media (max-width: 767px) {
     img {
       width: 100%;
     }
@@ -1646,26 +1815,9 @@ main {
     }
   }
 }
-@media (max-width: 768px) {
-  footer {
-    background-image: url("../assets/img/footer-banner-mob.png");
-    padding: 6rem 0 4rem;
-    .container {
-      flex-direction: column;
-      align-items: center;
-      gap: 2em;
-      .copyright {
-        order: 2;
-      }
-      #backToTop {
-        display: none;
-      }
-    }
-  }
-}
 
-//Max-width 320px
-@media (max-width: 320px) {
+//Max-width 375px
+@media (max-width: 375px) {
   main {
     .heroBanner {
       header {
