--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1092,7 +1092,6 @@ main {
         background: white;
         cursor: pointer;
         box-shadow: 3.564px 1.816px 31.5px 3.5px rgba(90, 90, 90, 0.15);
-
         justify-content: space-between;
         div {
           display: flex;
@@ -1110,7 +1109,11 @@ main {
         }
 
         .arrow {
-          width: auto;
+          width: 25px;
+        }
+        &.open {
+          border-bottom-left-radius: 0 !important;
+          border-bottom-right-radius: 0 !important;
         }
       }
 
@@ -1664,7 +1667,11 @@ main {
         }
 
         .arrow {
-          width: auto;
+          width: 25px;
+        }
+        &.open {
+          border-bottom-left-radius: 0 !important;
+          border-bottom-right-radius: 0 !important;
         }
       }
 
